--- a/uikit/src/main/res/values/attrs.xml
+++ b/uikit/src/main/res/values/attrs.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="ActionItemView">
-        <attr name="itemTitle" format="string" />
+        <attr name="itemTitleText" format="string" />
+        <attr name="endText" format="string" />
         <attr name="iconResource" format="reference" />
     </declare-styleable>
 </resources>
