--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/nav_graph">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_graph"
+    app:startDestination="@id/searchFragment">
+
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.starbars.search.SearchFragment"
+        android:label="SearchFragment"
+        tools:layout="@layout/fragment_search" />
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.starbars.profile.ProfileFragment"
+        android:label="ProfileFragment"
+        tools:layout="@layout/fragment_profile" />
+    <fragment
+        android:id="@+id/subscriptionsFragment"
+        android:name="com.starbars.subscriptions.SubscriptionsFragment"
+        android:label="SubscriptionsFragment"
+        tools:layout="@layout/fragment_subscriptions" />
+    <fragment
+        android:id="@+id/recomendationsFragment"
+        android:name="com.starbars.recomedations.RecomendationsFragment"
+        android:label="RecomendationsFragment"
+        tools:layout="@layout/fragment_recomendations" />
+    <fragment
+        android:id="@+id/hotelsFragment"
+        android:name="com.starbars.hotels.HotelsFragment"
+        android:label="HotelsFragment"
+        tools:layout="@layout/fragment_hotels" />
 
 </navigation>
