--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/searchFragment"
-        android:name="com.starbars.search.SearchFragment"
+        android:name="com.starbars.search.ui.SearchFragment"
         android:label="SearchFragment"
         tools:layout="@layout/fragment_search" />
     <fragment
