--- a/features/search/src/main/res/layout/fragment_search_bottom_sheet_dialog.xml
+++ b/features/search/src/main/res/layout/fragment_search_bottom_sheet_dialog.xml
@@ -3,6 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.searchmain.SearchFragment">
+    tools:context=".ui.searchdialog.SearchBottomSheetDialogFragment">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="SearchDialogFragment" />
 
 </FrameLayout>
