--- a/uikit/src/main/res/layout/action_item_view_layout.xml
+++ b/uikit/src/main/res/layout/action_item_view_layout.xml
@@ -17,7 +17,7 @@
 
     <TextView
         android:id="@+id/tv_action_title"
-        style="@style/FlightOne.Text.Title.Italic"
+        style="@style/FlightOne.Text.Medium.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_8dp"
@@ -26,7 +26,7 @@
 
     <TextView
         android:id="@+id/tv_end_text"
-        style="@style/FlightOne.Text.Title"
+        style="@style/FlightOne.Text.Medium.Title.Italic"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/gray4"
