--- a/uikit/src/main/res/values/dimens.xml
+++ b/uikit/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="action_item_radius">50dp</dimen>
+    <dimen name="image_radius_16">16dp</dimen>
+    <dimen name="action_item_radius_50">50dp</dimen>
+    <dimen name="offer_image_size_132">132dp</dimen>
 
     <dimen name="padding_8dp">8dp</dimen>
     <dimen name="padding_16dp">16dp</dimen>
