--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
+    android:paddingHorizontal="@dimen/padding_16dp"
     tools:context=".MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
