--- a/uikit/src/main/res/values/colors.xml
+++ b/uikit/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="gray2">#5E5F61</color>
     <color name="gray3">#DBDBDB</color>
     <color name="gray4">#9F9F9F</color>
+    <color name="gray5">#3E3F43</color>
 
     <color name="blue">#2261BC</color>
 </resources>
