--- a/uikit/src/main/res/values/styles.xml
+++ b/uikit/src/main/res/values/styles.xml
@@ -31,4 +31,22 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/image_radius_16</item>
     </style>
+
+    <style name="FlightOne.Text.Medium.TextInput" parent="TextAppearance.AppCompat" >
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="FlightOne.Text.Medium.TextInput.Hint" parent="TextAppearance.AppCompat" >
+        <item name="android:textColor">@color/gray4</item>
+    </style>
+
+    <style name="FlightOne.EditText" parent="Widget.AppCompat.EditText">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:paddingVertical">@dimen/padding_16dp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorHint">@color/gray4</item>
+        <item name="android:autofillHints">auto</item>
+        <item name="android:inputType">text</item>
+    </style>
 </resources>
