--- a/features/search/src/main/res/layout/layout_input_block_dialog.xml
+++ b/features/search/src/main/res/layout/layout_input_block_dialog.xml
@@ -13,15 +13,15 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/iv_main_search_search_icon"
+            android:id="@+id/iv_departure_plane"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_16dp"
             android:contentDescription="@null"
-            android:src="@drawable/ic_search_24"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_plane_departure_24"
+            app:layout_constraintBottom_toBottomOf="@+id/et_departure_city"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/et_departure_city" />
 
         <EditText
             android:id="@+id/et_departure_city"
@@ -29,9 +29,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginEnd="@dimen/margin_16dp"
             android:hint="Москва"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/iv_main_search_search_icon"
+            app:layout_constraintStart_toEndOf="@+id/iv_departure_plane"
             app:layout_constraintTop_toTopOf="parent" />
 
         <View
@@ -41,8 +42,20 @@
             android:layout_marginEnd="@dimen/margin_16dp"
             android:background="@color/gray2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/et_departure_city"
+            app:layout_constraintStart_toStartOf="@id/iv_departure_plane"
             app:layout_constraintTop_toBottomOf="@id/et_departure_city" />
+
+        <ImageView
+            android:id="@+id/iv_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_16dp"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_search_24"
+            app:layout_constraintBottom_toBottomOf="@+id/et_arrival_city"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/et_arrival_city"
+            app:tint="@color/white" />
 
         <EditText
             android:id="@+id/et_arrival_city"
@@ -51,8 +64,17 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_8dp"
             android:hint="Куда - Турция"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/iv_main_search_search_icon"
+            app:layout_constraintEnd_toStartOf="@+id/iv_cross"
+            app:layout_constraintStart_toEndOf="@id/iv_search"
             app:layout_constraintTop_toBottomOf="@id/et_departure_city" />
+
+        <ImageView
+            android:id="@+id/iv_cross"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_cross_24"
+            app:layout_constraintBottom_toBottomOf="@+id/et_arrival_city"
+            app:layout_constraintEnd_toEndOf="@+id/divider"
+            app:layout_constraintTop_toTopOf="@+id/et_arrival_city" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
