--- a/uikit/src/main/res/values/colors.xml
+++ b/uikit/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#0C0C0C</color>
+    <color name="black2">#242529</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="gray1">#2F3035</color>
