--- a/features/search/src/main/res/layout/fragment_search.xml
+++ b/features/search/src/main/res/layout/fragment_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:background="@color/black"
+    tools:background="@color/black1"
     tools:context=".ui.searchmain.SearchFragment">
 
     <TextView
