--- a/uikit/src/main/res/drawable/tickets_offer_list_backgrpund.xml
+++ b/uikit/src/main/res/drawable/tickets_offer_list_backgrpund.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/gray3" />
+    <solid android:color="@color/black3" />
     <corners android:radius="@dimen/card_radius_16" />
 </shape>
