--- a/uikit/src/main/res/values/styles.xml
+++ b/uikit/src/main/res/values/styles.xml
@@ -3,11 +3,11 @@
 
     <style name="FlightOne.Text" parent="TextAppearance.AppCompat" />
 
-    <style name="FlightOne.Text.Medium" parent="TextAppearance.AppCompat" >
+    <style name="FlightOne.Text.Medium" parent="TextAppearance.AppCompat">
         <item name="fontFamily">@font/sf_pro_display_medium</item>
     </style>
 
-    <style name="FlightOne.Text.Bold" parent="TextAppearance.AppCompat" >
+    <style name="FlightOne.Text.Bold" parent="TextAppearance.AppCompat">
         <item name="fontFamily">@font/sf_pro_display_semibold</item>
     </style>
 
@@ -25,6 +25,10 @@
 
     <style name="FlightOne.Text.Bold.OfferTitle">
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="FlightOne.Text.Bold.OfferTitle.Italic">
+        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="RoundedImageView">
