--- a/features/search/src/main/res/layout/item_famous_route.xml
+++ b/features/search/src/main/res/layout/item_famous_route.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_8dp"
+    android:layout_marginBottom="@dimen/margin_8"
     android:background="@color/gray1"
-    android:paddingTop="@dimen/padding_8dp">
+    android:paddingTop="@dimen/padding_8">
 
     <ImageView
         android:id="@+id/iv_place"
         android:layout_width="@dimen/image_size_40"
         android:layout_height="@dimen/image_size_40"
-        android:layout_marginBottom="@dimen/margin_8dp"
+        android:layout_marginBottom="@dimen/margin_8"
         android:contentDescription="@null"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +25,7 @@
         style="@style/FlightOne.Text.Bold.OfferTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_8dp"
+        android:layout_marginStart="@dimen/margin_8"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/tv_description"
         app:layout_constraintStart_toEndOf="@id/iv_place"
@@ -37,9 +37,9 @@
         style="@style/FlightOne.Text.Medium"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/margin_8dp"
+        android:layout_marginStart="@dimen/margin_8"
         android:layout_marginTop="@dimen/margin_4"
-        android:layout_marginBottom="@dimen/margin_8dp"
+        android:layout_marginBottom="@dimen/margin_8"
         android:textColor="@color/gray3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_place"
