--- a/features/search/src/main/res/layout/item_flight_offer.xml
+++ b/features/search/src/main/res/layout/item_flight_offer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginEnd="@dimen/margin_16dp"
+    android:layout_marginEnd="@dimen/margin_16"
     android:background="@color/black1"
     android:orientation="vertical">
 
@@ -21,7 +21,7 @@
         style="@style/FlightOne.Text.Bold.OfferTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_8"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/white"
@@ -32,7 +32,7 @@
         style="@style/FlightOne.Text.Medium.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_8"
         android:ellipsize="end"
         android:maxLines="1"
         android:textColor="@color/white"
@@ -43,7 +43,7 @@
         style="@style/FlightOne.Text.Medium.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_8"
         android:drawableStart="@drawable/ic_plane_flight_24"
         android:textColor="@color/white"
         tools:text="[от 22 264 Р]" />
