--- a/features/search/src/main/res/layout/fragment_search_bottom_sheet_dialog.xml
+++ b/features/search/src/main/res/layout/fragment_search_bottom_sheet_dialog.xml
@@ -12,8 +12,8 @@
         android:layout_width="@dimen/handler_width_36"
         android:layout_height="@dimen/handler_height_4"
         android:layout_gravity="center"
-        android:layout_marginTop="@dimen/margin_16dp"
-        android:layout_marginBottom="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_16"
+        android:layout_marginBottom="@dimen/margin_24"
         android:background="@drawable/bottom_sheet_hadler_background" />
 
     <include
@@ -23,7 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_24dp"
+        android:layout_marginTop="@dimen/margin_24"
         android:orientation="horizontal">
 
         <com.starbars.uikit.OptionItemView
@@ -46,7 +46,7 @@
             android:id="@+id/oiv_weekends"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_16dp"
+            android:layout_marginStart="@dimen/margin_16"
             android:layout_weight="1"
             app:optionIconResource="@drawable/ic_calendar_48"
             app:optionTitleText="@string/search_dialog_weekends" />
@@ -55,7 +55,7 @@
             android:id="@+id/oiv_hot_flights"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_16dp"
+            android:layout_marginStart="@dimen/margin_16"
             android:layout_weight="1"
             app:optionIconResource="@drawable/ic_hot_flight_48"
             app:optionTitleText="@string/search_dialog_hot_flights" />
@@ -65,9 +65,9 @@
         android:id="@+id/rv_popular_places"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_32dp"
+        android:layout_marginTop="@dimen/margin_32"
         android:background="@drawable/input_group_background"
-        android:padding="@dimen/padding_16dp"
+        android:padding="@dimen/padding_16"
         tools:itemCount="5"
         tools:listitem="@layout/item_famous_route" />
 
