--- a/features/search/src/main/res/layout/layout_input_block.xml
+++ b/features/search/src/main/res/layout/layout_input_block.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="@dimen/margin_8dp"
+    android:elevation="@dimen/margin_8"
     app:cardBackgroundColor="@color/gray2"
     app:cardCornerRadius="@dimen/card_radius_16"
-    app:cardElevation="@dimen/margin_8dp">
+    app:cardElevation="@dimen/margin_8">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/iv_main_search_search_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_8"
             android:contentDescription="@null"
             android:src="@drawable/ic_search_24"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -28,7 +28,7 @@
             style="@style/FlightOne.EditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_8"
             android:hint="Москва"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_main_search_search_icon"
@@ -38,7 +38,7 @@
             android:id="@+id/divider"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginEnd="@dimen/margin_16dp"
+            android:layout_marginEnd="@dimen/margin_16"
             android:background="@color/gray3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/et_departure_city"
@@ -49,7 +49,7 @@
             style="@style/FlightOne.EditText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_8dp"
+            android:layout_marginStart="@dimen/margin_8"
             android:hint="Куда - Турция"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_main_search_search_icon"
