--- a/uikit/src/main/res/layout/options_item_view_layout.xml
+++ b/uikit/src/main/res/layout/options_item_view_layout.xml
@@ -19,7 +19,7 @@
         style="@style/FlightOne.Text.Medium.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_8dp"
+        android:layout_marginTop="@dimen/margin_8"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="2"
