--- a/uikit/src/main/res/values/dimens.xml
+++ b/uikit/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="handler_height_4">4dp</dimen>
     <dimen name="corner_radius_8">8dp</dimen>
+    <dimen name="divider_size_10">10dp</dimen>
     <dimen name="image_radius_16">16dp</dimen>
     <dimen name="card_radius_16">16dp</dimen>
     <dimen name="handler_width_36">36dp</dimen>
@@ -12,17 +13,17 @@
     <dimen name="option_item_width_72">72dp</dimen>
     <dimen name="offer_image_size_132">132dp</dimen>
 
-    <dimen name="padding_8dp">8dp</dimen>
-    <dimen name="padding_16dp">16dp</dimen>
-    <dimen name="padding_32dp">32dp</dimen>
+    <dimen name="padding_8">8dp</dimen>
+    <dimen name="padding_16">16dp</dimen>
+    <dimen name="padding_32">32dp</dimen>
 
     <dimen name="margin_4">4dp</dimen>
-    <dimen name="margin_8dp">8dp</dimen>
-    <dimen name="margin_16dp">16dp</dimen>
-    <dimen name="margin_12dp">12dp</dimen>
-    <dimen name="margin_24dp">24dp</dimen>
-    <dimen name="margin_28dp">28dp</dimen>
-    <dimen name="margin_32dp">32dp</dimen>
-    <dimen name="margin_40dp">40dp</dimen>
-    <dimen name="margin_64dp">64dp</dimen>
+    <dimen name="margin_8">8dp</dimen>
+    <dimen name="margin_16">16dp</dimen>
+    <dimen name="margin_12">12dp</dimen>
+    <dimen name="margin_24">24dp</dimen>
+    <dimen name="margin_28">28dp</dimen>
+    <dimen name="margin_32">32dp</dimen>
+    <dimen name="margin_40">40dp</dimen>
+    <dimen name="margin_64">64dp</dimen>
 </resources>
