--- a/uikit/src/main/res/values/styles.xml
+++ b/uikit/src/main/res/values/styles.xml
@@ -38,7 +38,7 @@
 
     <style name="FlightOne.EditText" parent="Widget.AppCompat.EditText">
         <item name="android:background">@android:color/transparent</item>
-        <item name="android:paddingVertical">@dimen/padding_16dp</item>
+        <item name="android:paddingVertical">@dimen/padding_16</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/gray4</item>
         <item name="android:autofillHints">auto</item>
