--- a/features/search/src/main/res/layout/fragment_ticket_list.xml
+++ b/features/search/src/main/res/layout/fragment_ticket_list.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:background="@color/black1"
+    tools:background="@color/black"
     tools:context=".ui.tickets.TicketListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/flight_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black3"
+        android:background="@color/gray1"
         android:paddingVertical="@dimen/padding_8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +50,7 @@
             android:layout_marginStart="@dimen/margin_8"
             android:layout_marginTop="@dimen/margin_4"
             android:singleLine="true"
-            android:textColor="@color/gray4"
+            android:textColor="@color/gray6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_tickets_arrow_back"
             app:layout_constraintTop_toBottomOf="@id/tv_route"
