--- a/features/search/src/main/res/layout/item_flight_offer.xml
+++ b/features/search/src/main/res/layout/item_flight_offer.xml
@@ -5,7 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/margin_16"
-    android:background="@color/black1"
+    android:background="@color/black"
     android:orientation="vertical">
 
     <com.google.android.material.imageview.ShapeableImageView
