--- a/uikit/src/main/res/drawable/bottom_sheet_balck_background_top_radius_16.xml
+++ b/uikit/src/main/res/drawable/bottom_sheet_balck_background_top_radius_16.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/black2" />
+    <solid android:color="@color/gray2" />
     <corners
         android:topLeftRadius="@dimen/card_radius_16"
         android:topRightRadius="@dimen/card_radius_16" />
