--- a/uikit/src/main/res/layout/options_item_view_layout.xml
+++ b/uikit/src/main/res/layout/options_item_view_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:background="@color/black2">
+    tools:background="@color/gray2">
 
     <ImageView
         android:id="@+id/iv_option_icon"
