--- a/features/search/src/main/res/layout/fragment_search.xml
+++ b/features/search/src/main/res/layout/fragment_search.xml
@@ -50,7 +50,7 @@
         android:textColor="@color/white" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_concerts"
+        android:id="@+id/rv_concerts_offer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_24"
