--- a/features/search/src/main/res/layout/layout_input_block.xml
+++ b/features/search/src/main/res/layout/layout_input_block.xml
@@ -29,6 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_8"
+            android:focusable="auto"
             android:hint="Москва"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_main_search_search_icon"
@@ -50,6 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_8"
+            android:focusable="false"
             android:hint="Куда - Турция"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_main_search_search_icon"
